<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/fondot"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="15dp"
            android:text="@string/registra"
            android:textStyle="bold"
            android:textColor="@color/nIntenso"
            android:textAlignment="center"
            android:textSize="38sp" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="200dp"
            android:layout_height="180dp"
            android:layout_gravity="center"
            app:srcCompat="@drawable/logot" />

        <EditText
            android:id="@+id/rnombretxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:ems="11"
            android:inputType="text"
            android:layout_marginTop="15dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/campos"
            android:textColorHint="@color/black"
            android:hint="@string/nombre" />

        <EditText
            android:id="@+id/rtelefonotxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/campos"
            android:padding="12dp"
            android:ems="10"
            android:hint="@string/telefono"
            android:textColorHint="@color/black"
            android:inputType="phone" />

        <EditText
            android:id="@+id/rcorreotxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/campos"
            android:textColorHint="@color/black"
            android:padding="12dp"
            android:ems="10"
            android:hint="@string/correo"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/rcontratxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/campos"
            android:textColorHint="@color/black"
            android:padding="12dp"
            android:ems="10"
            android:hint="@string/contra"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/rconfirmarbt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/botonesf"
            android:backgroundTint="@color/nIntenso"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="15dp"
            android:padding="12dp"
            android:text="@string/sig" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>