<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondot"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="38sp"
            android:textStyle="bold"
            android:textColor="@color/nIntenso"
            android:layout_marginBottom="20dp"
            android:text="@string/bien" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="400dp"
            android:layout_height="300dp"
            app:srcCompat="@drawable/logot" />

        <Button
            android:id="@+id/pcontibt"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:textSize="18sp"
            android:padding="12dp"
            android:backgroundTint="@color/nIntenso"
            android:text="@string/continuar" />

        <Button
            android:id="@+id/pregisbt"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:textSize="18sp"
            android:padding="12dp"
            android:drawableStart="@drawable/botonesf"
            android:backgroundTint="@color/nIntenso"
            android:text="@string/registrar" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>