<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/fondot"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:textAlignment="center"
            android:textColor="@color/nIntenso"
            android:textSize="38sp"
            android:textStyle="bold"
            android:text="@string/verifica" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="320dp"
            android:layout_height="300dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="30dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            app:srcCompat="@drawable/verifi" />

        <EditText
            android:id="@+id/vcorreotxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/campos"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:hint="@string/correoc"
            android:textColorHint="@color/black"
            android:padding="12dp"
            android:ems="10"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/vcontratxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/campos"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:hint="@string/contrace_a"
            android:textColorHint="@color/black"
            android:padding="12dp"
            android:ems="10"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/vconfirmarbt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:textSize="18sp"
            android:backgroundTint="@color/nIntenso"
            android:text="@string/confirmar" />

        <Button
            android:id="@+id/btver"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:textSize="18sp"
            android:padding="12dp"
            android:backgroundTint="@color/nIntenso"
            android:text="Ver Datos" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>